updated registration field for coupon error messages

--- a/web/sites/zipang-casino/config/sync/language/en/zipang_config.registration_configuration.yml
+++ b/web/sites/zipang-casino/config/sync/language/en/zipang_config.registration_configuration.yml
@@ -16,7 +16,8 @@ error_state: 'state EN'
 error_city: 'city EN'
 error_zipcode: 'zip EN'
 error_address: 'address EN'
-error_couponcode: 'coupon EN'
+error_couponcode_title: 'coupon code title EN'
+error_couponcode: 'coupon code message EN'
 error_term_conditions: 'Terms and Conditions EN'
 error_captcha: 'captcha EN'
 error_promotions: 'promotions EN'
