--- a/web/sites/dafa-ghana/config/sync/language/sw/bet_scanner.alternative_form.yml
+++ b/web/sites/dafa-ghana/config/sync/language/sw/bet_scanner.alternative_form.yml
@@ -1,19 +1,11 @@
-bet_scanner_group__active_tab: edit-bet-history-config
-page_header_title: 'Bet Receipt Alternative Form'
-bet_receipt_label: 'Bet Receipt Number'
-submit_button_label: Submit
-clear_button_label: Clear
-information_blurb_content:
-  value: "<p>Input the Bet Receipt Scanner number on the field</p>\r\n"
-  format: basic_html
-value: null
-format: null
+bet_scanner_group__active_tab: edit-alternative-form-general-config
 enable_bet_scanner: 1
 alternative_form_text: 'Doesn''t work? Try this form'
 page_header_bet_scanner_title: 'Bet Receipt Scanner'
 page_content:
-  value: "<p class=\"text-align-center\">Please scan your Bet Receipt and click Start. If you want to repeat scanning, please click Reset. Select rear or front camera by updating the Change video source. For any question or concerns please contact <a href=\"mailto:customercare@dafabet.com.ke\">Customer Support</a>.\r\n</p>\r\n"
+  value: "<p class=\"text-align-center\">Please scan your Bet Receipt by clicking Start. If you want to repeat scanning, please click Reset. Select rear or front camera by updating the Change video source. For any question or concerns please contact <a href=\"mailto:customercare@dafabet.com.ke\">Customer Support</a>.</p>\r\n"
   format: basic_html
+page_header_title: 'Bet Receipt Alternative Form'
 kbs_end_point: 'https://stg-kbs-gateway-6rjsq4b3aq-an.a.run.app/kbs/v1/submit'
 kbs_api_key: AIzaSyCkO9YJ208qwi4BFqoNw0f4GlYK26IC7EE
 alt_form_success_message:
@@ -22,6 +14,7 @@ alt_form_success_message:
 alt_form_error_message:
   value: "<p>Error Occurs</p>\r\n"
   format: basic_html
+history_title: 'Betslip Scan History'
 date_scanned_label: 'Date Scanned'
 product_label: Product
 receipt_id_label: 'Bet Receipt ID'
@@ -29,4 +22,3 @@ shop_name_label: 'Shop Name'
 scan_status_label: 'Scan Status'
 nav_next_label: Next
 nav_previous_label: Previous
-history_title: 'Betslip Scan History'
