Added config sync file for Registration form

--- a/web/sites/jamboree-casino/config/sync/language/en/webcomposer_form_manager.form.jamboree_registration_form.captcha.yml
+++ b/web/sites/jamboree-casino/config/sync/language/en/webcomposer_form_manager.form.jamboree_registration_form.captcha.yml
@@ -1,6 +1,6 @@
 field_settings:
-  label: Town/City
-  placeholder: Town/City
+  label: Captcha
+  placeholder: Captcha
 field_validations:
   required:
     enable: 0
