--- a/web/sites/jamboree-casino/config/sync/language/en/webcomposer_form_manager.form.jamboree_registration_form.username.yml
+++ b/web/sites/jamboree-casino/config/sync/language/en/webcomposer_form_manager.form.jamboree_registration_form.username.yml
@@ -1,6 +1,6 @@
 field_settings:
-  label: Town/City
-  placeholder: Town/City
+  label: Username
+  placeholder: Username
 field_validations:
   required:
     enable: 0
