--- a/web/sites/jamboree-casino/config/sync/language/ja/webcomposer_form_manager.form.jamboree_registration_form.city.yml
+++ b/web/sites/jamboree-casino/config/sync/language/ja/webcomposer_form_manager.form.jamboree_registration_form.city.yml
@@ -6,9 +6,9 @@ field_validations:
   alpha:
     error_message: 'Field should be Alphabet characters only'
   alphanumeric:
-    error_message: 'Field should be alphanumeric'
+    error_message: 半角英数字にて入力して下さい。
   alpha_multi:
-    error_message: 'Value is not a valid multilingual character'
+    error_message: 半角英数字にて入力して下さい。
   numeric:
     error_message: 'Field should be numeric'
   no_symbols:
@@ -25,7 +25,3 @@ field_validations:
     error_message: 'This field only accepts specific characters.'
   valid_date:
     error_message: 'Date is invalid'
-  invalid_words:
-    error_message: 'Invalid/not allowed characters'
-  valid_languages:
-    error_message: 'This field only accepts specific characters.'
