--- a/web/sites/jamboree-casino/config/sync/language/ja/webcomposer_form_manager.form.jamboree_registration_form.firstname.yml
+++ b/web/sites/jamboree-casino/config/sync/language/ja/webcomposer_form_manager.form.jamboree_registration_form.firstname.yml
@@ -1,5 +1,5 @@
 field_settings:
-  label: 名前（半角英字）
+  label: 名前（半角英字)
 field_validations:
   required:
     error_message: 'Field should be required'
@@ -25,7 +25,3 @@ field_validations:
     error_message: 'This field only accepts specific characters.'
   valid_date:
     error_message: 'Date is invalid'
-  invalid_words:
-    error_message: 'Invalid/not allowed characters'
-  valid_languages:
-    error_message: 'This field only accepts specific characters.'
