--- a/web/sites/jamboree-casino/config/sync/language/ja/webcomposer_form_manager.form.jamboree_registration_form.username.yml
+++ b/web/sites/jamboree-casino/config/sync/language/ja/webcomposer_form_manager.form.jamboree_registration_form.username.yml
@@ -1,6 +1,6 @@
 field_settings:
-  label: 通貨
-  data: USD
+  label: ユーザーネーム
+  placeholder: 'Username Plc'
 field_validations:
   required:
     error_message: 'Field should be required'
@@ -26,3 +26,9 @@ field_validations:
     error_message: 'This field only accepts specific characters.'
   valid_date:
     error_message: 'Date is invalid'
+  must_not_match:
+    error_message: 'This must not match deafult.'
+  invalid_words:
+    error_message: 'Invalid/not allowed characters'
+  valid_languages:
+    error_message: 'This field only accepts specific characters.'
