--- a/web/sites/mobile-nextbet/config/sync/language/zh-hans/webcomposer_config.unsupported_currency.yml
+++ b/web/sites/mobile-nextbet/config/sync/language/zh-hans/webcomposer_config.unsupported_currency.yml
@@ -4,4 +4,4 @@ unsupported_currencies_message:
   value: "<p>很抱歉，<b>{game_provider}</b> 游戏 <b>{game_name}</b> 不支您的账户默认货币。\r\n</p>\r\n\r\n"
   format: basic_html
 unsupported_currencies_button: OK
-game_provider_mapping: "voidbridge|Voidbridge\r\nskywind|Skywind"
+game_provider_mapping: "asia_gaming|Asia Gaming\r\ncq9|CQ9\r\nevolution|Evolution\r\nmicro_gaming|Microgaming\r\npgsoft|PGSoft\r\nsa_gaming| SA Gaming\r\nflow_gaming|Flow Gaming\r\nplaytech|Playtech\r\nruby_play|Ruby Play\r\nskywind|Skywind\r\nvoidbridge|Voidbridge\r\nsolid_gaming|Solid Gaming\r\njsystem|JSystem\r\nezugi_gaming|Ezugi Gaming"
