ATLANTIC-1133: added esports configuration to the header config, added exported esports yml config files from stg.

--- a/web/sites/mobile-nextbet/config/sync/language/id/webcomposer_config.header_configuration.yml
+++ b/web/sites/mobile-nextbet/config/sync/language/id/webcomposer_config.header_configuration.yml
@@ -48,6 +48,8 @@ balance_label_mapping: "4|OW Sports\r\n6|Dafa Sports\r\n1|Casino Classic\r\n2|Ca
 mobile_slot_title: 'Nextbet kini menawarkan Slots mobile teraman di Asia!'
 mobile_live_dealer_title: 'Mainkan Kasino mobile Live Dealer di Nextbet!'
 mobile_arcade_title: 'Mainkan game Arcade mobile favorit anda di Nextbet!'
+mobile_esports_title: 'Play your favorite mobile Esports games with Nextbet!'
 logo_title_slots: 'Kasino Mobile'
 logo_title_live_dealer: 'Kasino Mobile Live Dealer'
 logo_title_arcade: 'Game Arcade Mobile'
+logo_title_esports: 'Mobile Esports'
