--- a/web/sites/mobile-nextbet/config/sync/language/ko/webcomposer_config.header_configuration.yml
+++ b/web/sites/mobile-nextbet/config/sync/language/ko/webcomposer_config.header_configuration.yml
@@ -48,6 +48,8 @@ balance_label_mapping: "4|OW Sports\r\n6|Dafa Sports\r\n1|Casino Classic\r\n2|Ca
 mobile_slot_title: '다파벳이 이제 아시아 최고로 안전한 모바일 카지노를 제공합니다!'
 mobile_live_dealer_title: '다파벳에서 라이브 딜러 모바일 카지노를 플레이하세요!'
 mobile_arcade_title: '다파벳에서 가장 좋아하는 모바일 아케이드 게임을 플레이하세요!'
+mobile_esports_title: 'Play your favorite mobile Esports games with Nextbet!'
 logo_title_slots: '모바일 카지노'
 logo_title_live_dealer: '라이브 딜러 모바일 카지노'
 logo_title_arcade: '모바일 아케이드 게임'
+logo_title_esports: 'Mobile Esports'
