--- a/web/sites/mobile-nextbet/config/sync/language/th/webcomposer_config.header_configuration.yml
+++ b/web/sites/mobile-nextbet/config/sync/language/th/webcomposer_config.header_configuration.yml
@@ -48,6 +48,8 @@ balance_label_mapping: "4|OW Sports\r\n6|Dafa Sports\r\n1|Casino Classic\r\n2|Ca
 mobile_slot_title: ตอนนี้เน็กซ์เบทขอเสนอคาสิโนมือถือที่ปลอดภัยที่สุดในเอเชีย!
 mobile_live_dealer_title: เดิมพันดีลเลอร์สดได้บนคาสิโนโมบายที่เน็กซ์เบท!
 mobile_arcade_title: เพลิดเพลินกับเกมส์อาเขตสุดโปรดบนมือถือกับเน็กซ์เบท!
+mobile_esports_title: 'Play your favorite mobile Esports games with Nextbet!'
 logo_title_slots: คาสิโนบนมือถือ
 logo_title_live_dealer: ดีลเลอร์สดบนคาสิโนโมบาย
 logo_title_arcade: เกมอาเขตบนมือถือ
+logo_title_esports: 'Mobile Esports'
