--- a/web/sites/mobile-nextbet/config/sync/language/vi/webcomposer_config.header_configuration.yml
+++ b/web/sites/mobile-nextbet/config/sync/language/vi/webcomposer_config.header_configuration.yml
@@ -48,6 +48,8 @@ balance_label_mapping: "4|OW Sports\r\n6|Dafa Sports\r\n1|Casino Classic\r\n2|Ca
 mobile_slot_title: 'Nextbet cung cấp trò chơi bảo mật Slots trên điện thoại tại Châu Á!'
 mobile_live_dealer_title: 'Chơi Live Dealer trực tuyến trên di động tại Nextbet!'
 mobile_arcade_title: 'Chơi trò chơi Arcade di động tại Nextbet!'
+mobile_esports_title: 'Play your favorite mobile Esports games with Nextbet!'
 logo_title_slots: 'Casino trên điện thoại'
 logo_title_live_dealer: 'Casino trực tuyến trên di động'
 logo_title_arcade: 'Trò chơi Arcade di động'
+logo_title_esports: 'Mobile Esports'
