--- a/web/sites/mobile-nextbet/config/sync/language/zh-hans/webcomposer_config.header_configuration.yml
+++ b/web/sites/mobile-nextbet/config/sync/language/zh-hans/webcomposer_config.header_configuration.yml
@@ -48,6 +48,8 @@ balance_error_text_product: N/A
 mobile_slot_title: nextbet将为您提供一个亚洲最安全的娱乐场手机版！
 mobile_live_dealer_title: 玩在线真人娱乐场手机端就在nextbet!
 mobile_arcade_title: 体验最好的移动端街机游戏就在nextbet!
+mobile_esports_title: 'Play your favorite mobile Esports games with Nextbet!'
 logo_title_slots: 娱乐场手机版
 logo_title_live_dealer: 在线真人娱乐场手机端
 logo_title_arcade: 移动端街机游戏
+logo_title_esports: 'Mobile Esports'
